--- a/result.html
+++ b/result.html
@@ -165,7 +165,7 @@
     <h2>Final Examination Result 2025-26</h2>
     <p>Click below to view your latest examination results.</p>
 
-    <a href="coming-soon.html" class="btn btn-success">
+    <a href="https://script.google.com/macros/s/AKfycbwTDLJv711J1fWfsmRWfTs_LuDjhbVANGLdjWnt5GksKfr8ZlqC7k1UEVaB24VuLkc-/exec" class="btn btn-success">
       <i class="fa-solid fa-book-open-reader"></i> Final Examination Result
     </a>
     
@@ -187,5 +187,6 @@
 
 </body>
 </html>
+
 
 
