--- a/downloads.html
+++ b/downloads.html
@@ -58,7 +58,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+          <li class="nav-item"><a class="nav-link" href="toppers.html">Examination</a></li>
           <li class="nav-item"><a class="nav-link" href="forms.html">Forms</a></li>
           <li class="nav-item"><a class="nav-link active" href="downloads.html">Downloads</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
