--- a/result.html
+++ b/result.html
@@ -528,21 +528,21 @@
   <!-- Result Box -->
   <div class="result-box">
     <h2>Final Examination Result 2025-26</h2>
-    <p>Click below to view your latest examination results with comprehensive details and analytics.</p>
+    <p>Click below to view your latest examination results.</p>
 
     <div class="btn-container">
       <a href="https://script.google.com/macros/s/AKfycbwTDLJv711J1fWfsmRWfTs_LuDjhbVANGLdjWnt5GksKfr8ZlqC7k1UEVaB24VuLkc-/exec" 
          class="result-btn" 
          id="finalResultBtn">
         <i class="fa-solid fa-book-open-reader"></i>
-        <span>Final Examination Result</span>
+        <span>Annual Examination</span>
       </a>
       
       <a href="https://result.samastha.info/" 
          class="result-btn" 
          id="samasthaBtn">
         <i class="fa-solid fa-book-open-reader"></i>
-        <span>Samastha Public Exam Result</span>
+        <span>Samastha Public Exam</span>
       </a>
       
       <a href="maintenance.html" 
@@ -711,3 +711,4 @@
   </script>
 </body>
 </html>
+
