--- a/toppers.html
+++ b/toppers.html
@@ -942,71 +942,71 @@ const classesData = [
   { 
     class: "1", 
     toppers: [
-      { name: "Ayesha Rahman", mark: "498 / 500", rank: "First" },
-      { name: "Rahul Kumar", mark: "495 / 500", rank: "Second" }
+      { name: "Suhail P", mark: "498 / 500", rank: "First" },
+      { name: "Minhaj P", mark: "495 / 500", rank: "Second" }
     ]
   },
   { 
     class: "2", 
     toppers: [
       { name: "Muhammed Shahid", mark: "493 / 500", rank: "First" },
-      { name: "Priya Sharma", mark: "490 / 500", rank: "Second" }
+      { name: "Ashmil T", mark: "490 / 500", rank: "Second" }
     ]
   },
   { 
     class: "3", 
     toppers: [
-      { name: "Nimra Sameer", mark: "487 / 500", rank: "First" },
-      { name: "Arjun Menon", mark: "485 / 500", rank: "Second" }
+      { name: "Muhammed Hadi K", mark: "487 / 500", rank: "First" },
+      { name: "Danish T", mark: "485 / 500", rank: "Second" }
     ]
   },
   { 
     class: "4", 
     toppers: [
       { name: "Faris P", mark: "489 / 500", rank: "First" },
-      { name: "Sneha Nair", mark: "486 / 500", rank: "Second" }
+      { name: "Rifaee P", mark: "486 / 500", rank: "Second" }
     ]
   },
   { 
     class: "5", 
     toppers: [
       { name: "Shamil N", mark: "491 / 500", rank: "First" },
-      { name: "Anjali Patel", mark: "488 / 500", rank: "Second" }
+      { name: "Nida Mol", mark: "488 / 500", rank: "Second" }
     ]
   },
   { 
     class: "6", 
     toppers: [
       { name: "Hana M", mark: "480 / 500", rank: "First" },
-      { name: "Vikram Singh", mark: "478 / 500", rank: "Second" }
+      { name: "Riya T", mark: "478 / 500", rank: "Second" }
     ]
   },
   { 
     class: "7", 
     toppers: [
       { name: "Riyas M", mark: "485 / 500", rank: "First" },
-      { name: "Meera Joshi", mark: "482 / 500", rank: "Second" }
+      { name: "Riya Mol", mark: "482 / 500", rank: "Second" }
     ]
   },
   { 
     class: "8", 
     toppers: [
       { name: "Zainab K", mark: "492 / 500", rank: "First" },
-      { name: "Aditya Verma", mark: "489 / 500", rank: "Second" }
+      { name: "Muhsin P", mark: "489 / 500", rank: "Second" }
     ]
   },
   { 
     class: "9", 
     toppers: [
-      { name: "Yusuf T", mark: "488 / 500", rank: "First" },
-      { name: "Neha Reddy", mark: "485 / 500", rank: "Second" }
+      { name: "Thaj T", mark: "488 / 500", rank: "First" },
+      { name: "Sinan P", mark: "485 / 500", rank: "Second" }
     ]
   },
   { 
     class: "10", 
     toppers: [
       { name: "Saniya F", mark: "495 / 500", rank: "First" },
-      { name: "Karan Malhotra", mark: "492 / 500", rank: "Second" }
+      { name: "Asna K", mark: "492 / 500", rank: "Second" }
     ]
   }
 ];
