--- a/toppers.html
+++ b/toppers.html
@@ -1147,12 +1147,12 @@ footer p {
         <i class="fas fa-lightbulb"></i>
       </div>
       <div class="instructions-content">
-        <h3>How to Generate Certificates</h3>
+        <h3>How to Generate Photo Poster</h3>
         <ul class="instructions-list">
           <li><i class="fas fa-camera"></i> Upload high-quality photos for best results</li>
           <li><i class="fas fa-palette"></i> Adjust photo border thickness and style</li>
           <li><i class="fas fa-search"></i> Use search to find specific classes quickly</li>
-          <li><i class="fas fa-eye"></i> Preview the certificate before downloading</li>
+          <li><i class="fas fa-eye"></i> Preview the Photo Poster before downloading</li>
         </ul>
       </div>
     </div>
