--- a/forms.html
+++ b/forms.html
@@ -820,12 +820,12 @@
 
                 <div class="col-md-6 form-group">
                   <label class="form-label">
-                    <i class="fas fa-school me-1"></i> Previous School
+                    <i class="fas fa-school me-1"></i> Previous Madrasa
                   </label>
                   <input type="text" 
                          class="form-control" 
-                         name="PreviousSchool" 
-                         placeholder="Name of previous school (if any)">
+                         name="PreviousMadrasa" 
+                         placeholder="Name of previous madrasa (if any)">
                   <div class="input-icon">
                     <i class="fas fa-university"></i>
                   </div>
