--- a/forms.html
+++ b/forms.html
@@ -664,7 +664,7 @@
                 Admission Application
               </h2>
               <p class="form-description">
-                Apply for admission to Noorussalam Madrasa for the academic year 2025-26. 
+                Apply for admission to Noorussalam Madrasa for the academic year 2026-27. 
                 Please fill all required fields accurately. You'll receive a confirmation 
                 and reference number upon successful submission.
               </p>
@@ -691,7 +691,7 @@
                   </label>
                   <input type="text" 
                          class="form-control" 
-                         name="FullName" 
+                         name="FullName (പൂർണ്ണമായ പേര്)" 
                          placeholder="Enter student's full name" 
                          required>
                   <div class="input-icon">
@@ -702,12 +702,12 @@
 
                 <div class="col-md-6 form-group">
                   <label class="form-label">
-                    <i class="fas fa-home me-1"></i> House Name
+                    <i class="fas fa-home me-1"></i> House Name(വീട്ടു പേര്)
                   </label>
                   <input type="text" 
                          class="form-control" 
                          name="PreferredName" 
-                         placeholder="Optional house/family name">
+                         placeholder="Optional house name">
                   <div class="input-icon">
                     <i class="fas fa-house-user"></i>
                   </div>
@@ -715,7 +715,7 @@
 
                 <div class="col-md-4 form-group">
                   <label class="form-label required">
-                    <i class="fas fa-calendar-alt me-1"></i> Date of Birth
+                    <i class="fas fa-calendar-alt me-1"></i> Date of Birth(ജനന തിയ്യതി)
                   </label>
                   <input type="date" 
                          class="form-control" 
