--- a/forms.html
+++ b/forms.html
@@ -849,12 +849,12 @@
                   <label class="form-label required bilingual-label">
                     <i class="fas fa-map-marker-alt me-1"></i>
                     <span class="english-text">Complete Address</span>
-                    <span class="malayalam-text">മുഴുവൻ വിലാസവും</span>
+                    <span class="malayalam-text">മുഴുവൻ വിലാസം</span>
                   </label>
                   <textarea class="form-control" 
                             name="address" 
                             rows="3" 
-                            placeholder="Full postal address with PIN code / പിൻകോഡ് ഉൾപ്പെടെയുള്ള മുഴുവൻ തപാൽ വിലാസം" 
+                            placeholder="Full postal address with PIN code" 
                             required></textarea>
                   <div class="input-icon">
                     <i class="fas fa-map-pin"></i>
@@ -882,7 +882,8 @@
                   <label class="form-label bilingual-label">
                     <i class="fas fa-school me-1"></i>
                     <span class="english-text">Previous Madrasa</span>
-                    <span class="malayalam-text">മുമ്പത്തെ മദ്രസ</span>
+                    <span class="malayalam-text">മുമ്പ് പഠിച്ചിരുന്ന മദ്റസ(ഉണ്ടെങ്കിൽ)
+                    </span>
                   </label>
                   <input type="text" 
                          class="form-control" 
