--- a/toppers.html
+++ b/toppers.html
@@ -1242,7 +1242,7 @@ footer p {
 
 <script>
 // Certificate background image URL - ADDED SOFT RIBBONS IN BACKGROUND
-const CERT_BG = "https://i.ibb.co/JRqqvrm0/TOPPER.jpg";
+const CERT_BG = "https://i.ibb.co/M5ZH2Svc/NSM-TOPPER-copy.jpg";
 
 // Class data with two toppers per class (First and Second)
 const classesData = [
