Update print statement from 'Hello' to 'Goodbye'

--- a/result.html
+++ b/result.html
@@ -586,7 +586,7 @@
       const { loader, text, originalText } = showLoading(btn);
       
       // Google Apps Script URL
-      const googleScriptUrl = "https://script.google.com/macros/s/AKfycbyOViqxaG2HPrgzUWcnWGyHfz3-hqY25SO5Fcsv-w8YBQcCeA9ZOFob4ckvWdlykgvr/exec";
+      const googleScriptUrl = "result1.html";
       
       // METHOD 1: Direct window location (simplest and most reliable)
       // This will open in the same tab
@@ -767,3 +767,4 @@
   </script>
 </body>
 </html>
+
