--- a/result.html
+++ b/result.html
@@ -580,11 +580,11 @@
       const { loader, text, originalText } = showLoading(btn);
       
       // REPLACE THIS URL WITH YOUR ACTUAL RESULTS PAGE
-      const annualResultsUrl = "YOUR_RESULTS_PAGE_URL_HERE.html";
+      const annualResultsUrl = "resulthome.html";
       
       // Open results page after delay
       setTimeout(() => {
-        if (annualResultsUrl && annualResultsUrl !== "YOUR_RESULTS_PAGE_URL_HERE.html") {
+        if (annualResultsUrl && annualResultsUrl !== "resulthome.html") {
           window.location.href = annualResultsUrl;
         } else {
           // Show alert if URL not configured
@@ -689,3 +689,4 @@
   </script>
 </body>
 </html>
+
