--- a/resulthome.html
+++ b/resulthome.html
@@ -309,7 +309,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <img src="https://i.postimg.cc/rmS5jXXX/COLLEGE-LOGO.png" alt="College Logo" class="college-logo">
+            <img src="https://i.ibb.co/hRD6Hsj9/nsm-logo-removebg-preview.png" alt="College Logo" class="college-logo">
             <h1 class="college-name">NOORUSSALAM SECONDARY MADRASA</h1>
             <p class="college-tagline">Kambippalam, Kerala Estate, Malappuram</p>
             <div class="exam-title">
@@ -586,7 +586,7 @@
                         <h2 style="color: #000; font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 20px; margin: 10px 0;">
                             ACADEMIC PERFORMANCE STATEMENT
                         </h2>
-                        <div style="color: #666; font-size: 14px;">FIRST SEMESTER EXAMINATION - 2025</div>
+                        <div style="color: #666; font-size: 14px;">ANNUAL EXAMINATION - 2025-26</div>
                     </div>
                     
                     <!-- Student Info -->
