--- a/resulthome.html
+++ b/resulthome.html
@@ -638,6 +638,11 @@
                                 <div style="font-size: 22px; font-weight: 800; color: #2D5BFF;">${student.rank || 'N/A'}</div>
                                 <div style="font-size: 10px; color: #adb5bd;">Position</div>
                             </div>
+                                <div class="summary-card">
+                                <div class="summary-value">${student.presents}</div>
+                                <div class="summary-label">Attendance</div>
+                               <div class="summary-small">Days: ${student.totalMaxPresents}</div>
+                            </div>
                         </div>
                     </div>
                     
