--- a/resulthome.html
+++ b/resulthome.html
@@ -638,10 +638,10 @@
                                 <div style="font-size: 22px; font-weight: 800; color: #2D5BFF;">${student.rank || 'N/A'}</div>
                                 <div style="font-size: 10px; color: #adb5bd;">Position</div>
                             </div>
-                                <div class="summary-card">
-                                <div class="summary-value">${student.presents}</div>
-                                <div class="summary-label">Attendance</div>
-                               <div class="summary-small">Days: ${student.totalMaxPresents}</div>
+                                <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
+                                <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Attendance</div>
+                                <div style="font-size: 22px; font-weight: 800; color:#2D5BFF;"${student.presents|| 'N/A'}</div>
+                                <div class="summary-small">Days: ${student.totalMaxPresents}</div>
                             </div>
                         </div>
                     </div>
