--- a/resulthome.html
+++ b/resulthome.html
@@ -640,7 +640,7 @@
                             </div>
                                 <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
                                 <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Attendance</div>
-                                <div style="font-size: 22px; font-weight: 800; color:#2D5BFF;"${student.presents|| 'N/A'}</div>
+                                <div style="font-size: 22px; font-weight: 800; color:#2D5BFF;"${student.totalMaxPresents|| 'N/A'}</div>
                                 <div class="summary-small">Days: ${student.totalMaxPresents}</div>
                             </div>
                         </div>
