--- a/resulthome.html
+++ b/resulthome.html
@@ -617,35 +617,33 @@
                             PERFORMANCE OVERVIEW
                         </h3>
                         
-                        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 10px; margin-bottom: 20px;">
-                            <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
-                                <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Total Marks</div>
-                                <div style="font-size: 22px; font-weight: 800; color: #2D5BFF;">${student.totalScore || 0}</div>
-                                <div style="font-size: 10px; color: #adb5bd;">Max: ${student.totalMaxScore || 100}</div>
-                            </div>
-                            <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
-                                <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Percentage</div>
-                                <div style="font-size: 22px; font-weight: 800; color: ${percentageColor};">${percentage}%</div>
-                                <div style="font-size: 10px; color: #adb5bd;">Performance</div>
-                            </div>
-                            <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
-                                <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Overall Grade</div>
-                                <div style="font-size: 22px; font-weight: 800; color: #00C9A7;">${student.overallGrade || 'N/A'}</div>
-                                <div style="font-size: 10px; color: #adb5bd;">Grade Point</div>
-                            </div>
-                            <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
-                                <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Class Rank</div>
-                                <div style="font-size: 22px; font-weight: 800; color: #2D5BFF;">${student.rank || 'N/A'}</div>
-                                <div style="font-size: 10px; color: #adb5bd;">Position</div>
-                            </div>
-                                <div style="background: white; border-radius: 8px; padding: 15px; text-align: center; border: 1px solid #dee2e6;">
-                                <div style="font-size: 12px; color: #6c757d; margin-bottom: 8px;">Attendance</div>
-                                <div style="font-size: 22px; font-weight: 800; color:#2D5BFF;"${student.totalMaxPresents|| 'N/A'}</div>
-                                <div class="summary-small">Days: ${student.totalMaxPresents}</div>
-                            </div>
+                <div class="performance-summary">
+                    <h3 class="form-title" style="margin-bottom: 10px; text-align: center; font-size: 16px;">PERFORMANCE SUMMARY</h3>
+                    <div class="summary-grid">
+                        <div class="summary-card">
+                            <div class="summary-value">${student.totalScore}</div>
+                            <div class="summary-label">Total Marks</div>
+                            <div class="summary-small">Max: ${student.totalMaxScore}</div>
+                        </div>
+                        <div class="summary-card">
+                            <div class="summary-value">${student.percentage}%</div>
+                            <div class="summary-label">Percentage</div>
+                        </div>
+                        <div class="summary-card">
+                            <div class="summary-value">${student.overallGrade}</div>
+                            <div class="summary-label">Grade</div>
+                        </div>
+                        <div class="summary-card">
+                            <div class="summary-value">${student.rank}</div>
+                            <div class="summary-label">Rank</div>
+                        </div>
+                        <div class="summary-card">
+                            <div class="summary-value">${student.presents}</div>
+                            <div class="summary-label">Attendance</div>
+                            <div class="summary-small">Days: ${student.totalMaxPresents}</div>
                         </div>
                     </div>
-                    
+                </div>
                     <!-- Subject-wise Performance -->
                     <div style="margin-bottom: 25px;">
                         <h3 style="color: #2D5BFF; text-align: center; margin-bottom: 15px; font-size: 16px;">
