--- a/resultpage.html
+++ b/resultpage.html
@@ -215,7 +215,7 @@
                 </div>
             </a>
             
-            <a href="#" class="dashboard-card card-2">
+            <a href="modelresult.html" class="dashboard-card card-2">
                 <div class="card-icon">
                     <i class="fas fa-chart-network"></i>
                 </div>
