--- a/modelresult.html
+++ b/modelresult.html
@@ -690,9 +690,9 @@
                     </label>
                     <select class="form-control" id="class" name="class" required>
                         <option value="">Select Class</option>
-                        <option value="1A">1A</option>
-                        <option value="2A">2A</option>
-                        <option value="3A">3A</option>
+                        <option value="5">5</option>
+                        <option value="7">7</option>
+                        <option value="10">10</option>
                         <option value="4A">4A</option>
                         <option value="6A">6A</option>
                         <option value="8A">8A</option>
