--- a/modelresult.html
+++ b/modelresult.html
@@ -561,7 +561,7 @@
         <!-- Countdown Container -->
         <div class="countdown-container" id="countdownContainer">
             <h2 class="countdown-title">
-                <i class="fas fa-clock"></i> Results Not Published Yet
+                <i class="fas fa-clock"></i> Results Publishing Soon
             </h2>
             <p class="countdown-message" id="countdownMessage">
                 Model Examination Results 2025-26 will be available in:
@@ -675,12 +675,8 @@
             <!-- Result will be displayed here -->
         </div>
 
-        <!-- Footer -->
+        <!-- Footer - Madrasa Name Removed -->
         <footer class="no-print">
-            <h5 style="color: var(--primary); font-family: 'Montserrat', sans-serif; font-size: 16px; margin-bottom: 10px;">
-                <i class="fas fa-graduation-cap" style="color: var(--secondary); margin-right: 8px;"></i>
-                NOORUSSALAM SECONDARY MADRASA
-            </h5>
             <p style="font-size: 13px; margin-bottom: 8px;">© 2025 Noorussalam Madrasa | All Rights Reserved</p>
             <p style="font-size: 12px; margin-bottom: 15px;"><small>Designed with <i class="fas fa-heart" style="color: #e74c3c;"></i> by Suhail Kerala</small></p>
             <div>
