--- a/resulthome.html
+++ b/resulthome.html
@@ -632,7 +632,7 @@
         <!-- Countdown Container -->
         <div class="countdown-container" id="countdownContainer">
             <h2 class="countdown-title">
-                <i class="fas fa-clock"></i> Results Publishing Soon
+                <i class="fas fa-clock"></i> Results Not Published Yet
             </h2>
             <p class="countdown-message" id="countdownMessage">
                 Annual Examination Results 2025-26 will be available in:
