--- a/resultpage.html
+++ b/resultpage.html
@@ -391,7 +391,7 @@
             <h1>Academic Dashboard</h1>
             
             <p class="subtitle">
-                Access academic performance data and insights through our result management system.
+                Access academic performance data.
             </p>
             
             <div class="academic-year">
