--- a/resulthome.html
+++ b/resulthome.html
@@ -822,7 +822,7 @@
                 </div>
                 
                 <button type="submit" class="btn btn-primary" id="submitBtn">
-                    <i class="fas fa-search"></i> Check My Result
+                    <i class="fas fa-search"></i> Check Result
                 </button>
             </form>
         </div>
@@ -864,13 +864,13 @@
             <div>
                 <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 16px;">
                     <span style="color: var(--primary); font-size: 0.8rem; font-weight: 500;">
-                        <i class="fas fa-shield-alt"></i> Secure Portal
+                        <i class="fas fa-shield-alt"></i> Secure
                     </span>
                     <span style="color: var(--success); font-size: 0.8rem; font-weight: 500;">
-                        <i class="fas fa-check-circle"></i> Verified Results
+                        <i class="fas fa-check-circle"></i> Verified
                     </span>
                     <span style="color: var(--accent); font-size: 0.8rem; font-weight: 500;">
-                        <i class="fas fa-bolt"></i> Fast Processing
+                        <i class="fas fa-bolt"></i> Fast
                     </span>
                 </div>
             </div>
