--- a/resulthome.html
+++ b/resulthome.html
@@ -800,13 +800,13 @@
                     </label>
                     <select class="form-control" id="class" name="class" required>
                         <option value="">Select Class</option>
-                        <option value="1A">1A</option>
-                        <option value="2A">2A</option>
-                        <option value="3A">3A</option>
-                        <option value="4A">4A</option>
-                        <option value="6A">6A</option>
-                        <option value="8A">8A</option>
-                        <option value="9A">9A</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="6">6</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
                     </select>
                 </div>
                 
