--- a/modelresult.html
+++ b/modelresult.html
@@ -620,7 +620,7 @@
                     <label class="form-label" for="class">
                         <i class="fas fa-school"></i> Class
                     </label>
-                    <select class="form-control" id="class" name="class" required>
+                    <select class="form-control" id="class" name="class" required autofocus>
                         <option value="">Select Class</option>
                         <option value="5">5</option>
                         <option value="7">7</option>
@@ -633,9 +633,9 @@
                         <i class="fas fa-id-card"></i> Register Number
                     </label>
                     <input type="text" class="form-control" id="roll" name="roll" 
-                           placeholder="Enter your register number (e.g., R1, R2, R001)" required autofocus>
+                           placeholder="Enter your register number" required>
                     <div class="format-example">
-                        <small><strong>Examples:</strong> R1, R2, R01 </small>
+                        <small><strong>Examples:</strong> R12345, R12354, R23456 </small>
                     </div>
                 </div>
                 
