--- a/modelresult.html
+++ b/modelresult.html
@@ -888,7 +888,7 @@
             }
             
             if (!validateRegistrationNumber(roll)) {
-                showError('Invalid Register Number', 'Please enter a valid register number (e.g., R1, R2, R001).');
+                showError('Invalid Register Number', 'Please enter a valid register number.');
                 return;
             }
             
