--- a/modelresult.html
+++ b/modelresult.html
@@ -977,7 +977,7 @@
                         </div>
                         <div>
                             <div style="font-size: 12px; color: var(--primary-dark); margin-bottom: 5px; font-weight: 600;">
-                                <i class="fas fa-id-card"></i> Roll No
+                                <i class="fas fa-id-card"></i> Register No
                             </div>
                             <div style="font-size: 16px; font-weight: 700; color: var(--primary-dark); padding: 8px 0; border-bottom: 1px solid rgba(10, 61, 98, 0.1);">
                                 ${student.rollNumber}
