--- a/index.html
+++ b/index.html
@@ -1900,7 +1900,7 @@
   font-weight:600;
   animation: blinkMsg 1.5s infinite;
   font-family:'Poppins', sans-serif;">
-  ⚠ Important Notice: Admission started! Apply now.
+  ⚠ Important Notice: Model exam results will be published soon..
 </div>
 
 <!-- News Ticker START -->
@@ -2334,7 +2334,7 @@
           </li>
           <li class="mb-3">
             <i class="fas fa-clock me-2" style="color: var(--accent);"></i>
-            Mon - Sat: 8:00 AM - 5:00 PM
+            Sat - Thu: 6:00 AM - 10:00 AM
           </li>
         </ul>
         
@@ -2499,3 +2499,4 @@
 
 </body>
 </html>
+
