--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
                 </div>
               </a>
               
-              <a class="dropdown-action-item" href="student-zone.html">
+              <a class="dropdown-action-item" href="maintenance.html">
                 <div class="action-icon">
                   <i class="fas fa-door-open"></i>
                 </div>
@@ -1060,7 +1060,7 @@
         
         <!-- Library -->
         <li class="nav-item">
-          <a class="nav-link nav-icon" href="library.html" target="_blank">
+          <a class="nav-link nav-icon" href="maintenance.html" target="_blank">
             <i class="fas fa-book"></i>
             <span>Library</span>
             <div class="nav-hover-effect"></div>
@@ -2361,3 +2361,4 @@
 
 </body>
 </html>
+
