--- a/sbv.html
+++ b/sbv.html
@@ -517,7 +517,7 @@
         <div class="union-info-card">
           <h3><i class="fas fa-info-circle union-red-text"></i> About SKSBV</h3>
           <p class="malayalam" style="text-align: justify; line-height: 1.7;">
-            The Vedi is the platform forthe students who are studying in madrassas run by Samastha Kerala Islam Matha Vidyabhyasa Board. It is controlled by Samastha Kerala Jem-Iyyathul Mu’allimeen Central Council. The organisation was formed on December 26, 1993, as per the advice of Panakkad Syed Umar Ali Shihab Thangal and K T Manu Musaliyar. After the death of tall figures of Samastha, a generation came into existence which did not show interest in anything. It was necessary to inform the new generation about Samastha and its leaders and the Bala Vedi served the purpose. According to the constitution of the organisation, a community of children who are based on the ideology of Samastha should be created. It also aims at creating religious thoughts, discipline and amity among children and strengthening the bonds between teachers and students. The Vedi has been working among children, cautioning them about the dangers of atheistic ideologies and deviant acts. The organisation does follow-up activities to find out the drop outs and bring them back and gives all help for financially backward students to pursue their studies. The Vedi has units and range units in the state, which include Nilgiris in Tamil Nadu and Dakshina Kannada and Kodagu in Karnataka. Units are functioning in the Gulf countries. S V Muhammadali and Aburrasaq Busthani were the first organisers of the organisation. After framing the Samastha constitution, Panakkad Syed Hamid Ali Shihab Thangal became the first president. Panakkad Syed Munavvar Ali Shihab Thangal also became the president of the organisation. It has an advisory committee with representatives from all other feeder organisations of Samastha.
+            കേരളത്തിലെ ആധികാരിക മതപണ്ഡിതസഭയാണല്ലോ സമസ്ത കേരള ജംഇയ്യത്തുല്‍ ഉലമാഅ്. സമസ്തയുടെ കീഴില്‍ പ്രവര്‍ത്തിക്കുന്ന ധാരാളം കീഴ്ഘടകങ്ങളുണ്ട്. അവയില്‍ ഏറ്റവും താഴെയുള്ളതും എന്നാല്‍ അംഗബലത്തില്‍ ഏറ്റവും വലുതുമായ സംഘടനയാണ് സമസ്ത കേരള സുന്നി ബാല വേദി. സമസ്ത കേരള ഇസ്ലാം മതവിദ്യാഭ്യാസ ബോര്‍ഡിന്റെ കീഴില്‍ പ്രവര്‍ത്തിക്കുന്ന മദ്റസകളിലെ വിദ്യാര്‍ത്ഥികളാണ് സംഘടനയുടെ അംഗങ്ങള്‍. ബോര്‍ഡിന്റെ കീഴില്‍ പ്രവര്‍ത്തിക്കുന്ന സമസ്ത കേരള ജംഇയ്യത്തുല്‍ മുഅല്ലിമീന്‍ സെന്‍ട്രല്‍ കൗണ്‌സിലിനാണ് ഈ വിദ്യാര്‍ത്ഥി പ്രസ്ഥാനത്തിന്റെ നിയന്ത്രണം. 1993 ഡിസംബര്‍ 26ന് പാണക്കാട് ഉമര്‍ അലി ശിഹാബ് തങ്ങളും മര്‍ഹും കെ.ടി. മാനു മുസ്ലിയാരും ചേര്‍ന്നാണ് സംഘടനയുടെ ആവശ്യതകത സമൂഹത്തിനു മുമ്പില്‍ സമര്‍പ്പിച്ചതും അതിന് അസ്ഥിവാരം പണിതതും. ഈ സംഘടനയുടെ പ്രവര്‍ത്തനങ്ങള്‍ കാലഘട്ടം കാതോര്‍ത്തിരുന്നത് ഒരു സത്യം തന്നെയായിരുന്നു.
           </p>
           <ul>
             <li><strong>Vision:</strong> To create a vibrant student community that balances Islamic values with academic excellence</li>
@@ -532,11 +532,11 @@
         <div class="union-info-card">
           <h3><i class="fas fa-calendar-alt union-red-text"></i> Union Activities</h3>
           <ul>
-            <li><strong>Annual College Fest</strong> - Cultural & Academic</li>
+            <li><strong>Sahitya Samajam</strong> - Cultural & Academic</li>
             <li><strong>Academic Seminars</strong> - Subject specific</li>
             <li><strong>Community Service</strong> - Social outreach</li>
             <li><strong>Cultural Programs</strong> - Arts & Talent shows</li>
-            <li><strong>Debate Competitions</strong> - Intra & Inter college</li>
+            <li><strong>Debate Competitions</strong> - Intra & Inter madrasa</li>
             <li><strong>Educational Trips</strong> - Learning expeditions</li>
           </ul>
         </div>
@@ -561,8 +561,8 @@
       <!-- President -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="President">
-          <div class="member-name">MUHAMMED FAWAS PK</div>
+          <img src="https://images.unsplash.com/photo-1568602471122-7832b=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="President">
+          <div class="member-name">SHABIL M</div>
           <div class="member-position">President</div>
         </div>
       </div>
@@ -570,7 +570,7 @@
       <!-- Vice President -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Vice President">
+          <img src="https://images.unsplash.com/photo-1507003211169b-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Vice President">
           <div class="member-name">ABDUL HAMEED</div>
           <div class="member-position">Vice President</div>
         </div>
@@ -580,7 +580,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
           <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="General Secretary">
-          <div class="member-name">FAHAD K.</div>
+          <div class="member-name">MUHAMMED SINAN P.</div>
           <div class="member-position">General Secretary</div>
         </div>
       </div>
