--- a/index.html
+++ b/index.html
@@ -946,6 +946,18 @@
                     <div class="dropdown-sub">Former Students Network</div>
                   </div>
                 </div>
+                <li><hr class="dropdown-divider"></li>
+            <li>
+              <a class="dropdown-item" href="alumni.html">
+                <div class="dropdown-item-content">
+                  <i class="fas fa-graduation-cap"></i>
+                  <div>
+                    <div class="dropdown-title">SKSBV</div>
+                    <div class="dropdown-sub">Samastha Kerala Sunni Bala vedhi Unit</div>
+                  </div>
+                </div>
+              </a>
+            </li>
               </a>
             </li>
           </ul>
@@ -2361,4 +2373,5 @@
 
 </body>
 </html>
+
 
