--- a/index.html
+++ b/index.html
@@ -950,12 +950,13 @@
             <li>
               <a class="dropdown-item" href="alumni.html">
                 <div class="dropdown-item-content">
-                  <i class="fas fa-graduation-cap"></i>
+                  <i class="fas fa-users"></i>
                   <div>
                     <div class="dropdown-title">SKSBV</div>
                     <div class="dropdown-sub">Samastha Kerala Sunni Bala vedhi Unit</div>
                   </div>
                 </div>
+                <li><hr class="dropdown-divider"></li>
               </a>
             </li>
               </a>
@@ -2373,5 +2374,3 @@
 
 </body>
 </html>
-
-
