--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="sksbv.html">
+              <a class="dropdown-item" href="sbv.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-users"></i>
                   <div>
@@ -2183,3 +2183,4 @@
 
 </body>
 </html>
+
